# haskell_study

dynamic_programming/Untitled.hsproj/: .uuid
dynamic_programming/Untitled.hsproj/dp/: dp.cabal
dynamic_programming/Untitled.hsproj/dp/lib/: Code_1_10.hs  Code_2_4.hs  Problem_1_1.hs  Problem_1_2.hs  Problem_1_3.hs  _Code_1_10.hsplay  _Code_2_4.hsplay  _Problem_1_1.hsplay  _Problem_1_2.hsplay  _Problem_1_3.hsplay
projects/HanoiTower.hsproj/: .uuid
projects/HanoiTower.hsproj/hanoiTower/: HanoiTower.cabal  Main.hs  _Main.hsplay
projects/HelloHaskell.hsproj/: .uuid
projects/HelloHaskell.hsproj/HelloHaskell/: HelloHaskell.cabal  NaiveMath.hs  Set.hs  WeirdNumber.hs  _NaiveMath.hsplay  _Set.hsplay  _WeirdNumber.hsplay
projects/MusicalChordsTest.hsproj/: .uuid
projects/MusicalChordsTest.hsproj/MusicalChordsTest/: Chord.hs  CircularListZipper.hs  Indexable.hs  Main.hs  MusicalChordsTest.cabal  PrimeNumber.hs  SimpleChord.hs  SimpleInterval.hs  SimplePitch.hs  SimpleScale.hs  Tuple.hs  Utility.hs  _Chord.hsplay  _CircularListZipper.hsplay  _Indexable.hsplay  _Main.hsplay  _PrimeNumber.hsplay  _SimpleInterval.hsplay  _SimplePitch.hsplay  _SimpleScale.hsplay  _Tuple.hsplay  _Utility.hsplay
projects/MusicalChordsTest.hsproj/MusicalChordsTest/Math/: FunctionPlot.hs  PrimeNumber.hs  SinusoidalFunction.hs  _FunctionPlot.hsplay  _SinusoidalFunction.hsplay
projects/MusicalChordsTest.hsproj/MusicalChordsTest/SimpleMusic/: Chord.hs  ChordWavePlot.hs  DiatonicChord.hs  Interval.hs  Note.hs  Pitch.hs  Scale.hs  SinusoidalFunction.hs  SinusoidalSound.hs  SoundSynthesis.hs  _ChordWavePlot.hsplay  _DiatonicChord.hsplay  _Interval.hsplay  _Note.hsplay  _Pitch.hsplay  _Scale.hsplay  _SinusoidalSound.hsplay  _SoundSynthesis.hsplay
projects/SpriteKitTest.hsproj/: .uuid
projects/SpriteKitTest.hsproj/SpriteKitTest/: Main.hs  SpriteKitTest.cabal  _Main.hsplay  _REcordSyntaxTest.hsplay
projects/combinationTest.hsproj/: .uuid
projects/combinationTest.hsproj/combinationTest/: Main.hs  _Main.hsplay  combinationTest.cabal
projects/corecursionTest.hsproj/: .uuid
projects/corecursionTest.hsproj/corecursionTest/: Main.hs  _Main.hsplay  corecursionTest.cabal
projects/permutationTest.hsproj/: .uuid
projects/permutationTest.hsproj/permutationTest/: Main.hs  _Main.hsplay  permutationTest.cabal
projects/randomNumberTest.hsproj/: .uuid
projects/randomNumberTest.hsproj/randomNumberTest/: Main.hs  _Main.hsplay  randomNumberTest.cabal
