cabal-version: 2.4
name: dp
version: 1.0
author: ghjang
stability: experimental
category: algorithm practice
x-ghc-framework-version: 8.6.4-13.14-2
x-last-ide-version: HfM1.7.0

library
    hs-source-dirs: lib
    other-modules:
        Problem_1_1
        Code_1_10
        Code_2_4
        Problem_1_2
        Problem_1_3
    default-language: Haskell2010
    build-depends:
        base -any
