cabal-version: 2.4
name: MusicalChordsTest
version: 1.0
stability: experimental
x-ghc-framework-version: 8.6.4-13.14-2
x-last-ide-version: HfM1.7.0

executable MusicalChordsTest
    main-is: Main.hs
    other-modules:
        SimpleMusic.SoundSynthesis
        SimpleMusic.Chord
        SimpleMusic.Interval
        SimpleMusic.Scale
        SimpleMusic.Note
        SimpleMusic.ChordWavePlot
        SimpleMusic.Pitch
        SimpleMusic.SinusoidalSound
        SimpleMusic.DiatonicChord
        Math.PrimeNumber
        Math.FunctionPlot
        Math.SinusoidalFunction
        Indexable
        Tuple
        Utility
        CircularListZipper
    default-language: Haskell2010
    build-depends:
        mtl -any,
        bytestring -any,
        containers -any,
        base -any,
        async -any,
        spritekit -any
