cabal-version: 2.4
name: MusicalChordsTest
version: 1.0
stability: experimental
x-ghc-framework-version: 8.6.4-13.14-2
x-last-ide-version: HfM1.7.0

executable MusicalChordsTest
    main-is: Main.hs
    other-modules:
        Tuple
        SimpleMusic.Chord
        SimpleMusic.Pitch
        SimpleMusic.Note
        SimpleMusic.Interval
        SimpleMusic.DiatonicChord
        SimpleMusic.Scale
        SimpleMusic.SinusoidalSound
        SimpleMusic.SoundSynthesis
        SimpleMusic.ChordWavePlot
        Utility
        Indexable
        CircularListZipper
        Math.FunctionPlot
        Math.SinusoidalFunction
        Math.PrimeNumber
    default-language: Haskell2010
    build-depends:
        mtl -any,
        bytestring -any,
        containers -any,
        base -any,
        async -any,
        spritekit -any
