cabal-version: 2.4
name: MusicalChordsTest
version: 1.0
stability: experimental
x-ghc-framework-version: 8.6.4-13.14-2
x-last-ide-version: HfM1.7.0

executable MusicalChordsTest
    main-is: Main.hs
    other-modules:
        Tuple
        Utility
        Math.FunctionPlot
        Math.SinusoidalFunction
        Math.PrimeNumber
        CircularListZipper
        Indexable
        SimpleMusic.Chord
        SimpleMusic.Note
        SimpleMusic.Pitch
        SimpleMusic.DiatonicChord
        SimpleMusic.Scale
        SimpleMusic.Interval
        SimpleMusic.SinusoidalSound
        SimpleMusic.ChordWavePlot
        SimpleMusic.SoundSynthesis
    default-language: Haskell2010
    build-depends:
        mtl -any,
        bytestring -any,
        containers -any,
        base -any,
        async -any,
        spritekit -any
