cabal-version: 2.4
name: SpriteKitTest
version: 1.0
stability: experimental
x-ghc-framework-version: 8.6.4-13.14-2
x-last-ide-version: HfM1.7.0

executable SpriteKitTest
    main-is: Main.hs
    other-modules:
        REcordSyntaxTest
    default-language: Haskell2010
    build-depends:
        base -any,
        spritekit -any
