cabal-version: 2.4
name: randomNumberTest
version: 1.0
stability: experimental
x-ghc-framework-version: 8.6.4-13.14-2
x-last-ide-version: HfM1.7.0

executable randomNumberTest
    main-is: Main.hs
    default-language: Haskell2010
    build-depends:
        old-time -any,
        base -any,
        random -any,
        mtl -any
